<resources>
    <string name="app_name">白</string>

    <string name="chats">聊天</string>
    <string name="contacts">联系人</string>
    <string name="discover">发现</string>
    <string name="me">我的</string>

    <string name="new_chats">new chats</string>
    <string name="add_contacts">add contacts</string>
    <string name="scan">scan</string>
    <string name="money">money</string>
    <string name="help_feed">help &amp; feedback</string>

    <string name="wallet">Wallet</string>
    <string name="favorites">Favorites</string>
    <string name="my_posts">My Posts</string>
    <string name="cards_offers">Cards &amp; Offers</string>
    <string name="sticker_gallery">Sticker &amp; Gallery</string>
    <string name="settings">Settings</string>

    <string name="moments">Moments</string>
    <string name="scans">Scan</string>
    <string name="shake">Shake</string>
    <string name="nearby">People Nearby</string>
    <string name="message_in_bottle">Message in a Bottle</string>
    <string name="mini_programs">Mini Programs</string>

</resources>
