<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dahei.me.myapplication.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chats"
        android:orderInCategory="100"
        android:title="@string/new_chats"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/add_contacts"
        android:icon="@drawable/category_normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/scan"
        android:icon="@drawable/category_normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_money"
        android:orderInCategory="100"
        android:title="@string/money"
        android:icon="@drawable/category_normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_feed"
        android:orderInCategory="100"
        android:title="@string/help_feed"
        android:icon="@drawable/category_normal"
        app:showAsAction="never" />
</menu>
